# rs-trig

./: Cargo.toml  README.md
src/: lib.rs  trig.rs  trig_f32.rs  trig_f64.rs
